# coreboot

./: .checkpatch.conf  .clang-format  .config_t440p  .config_t440p.old  .config_x230  .config_x230.old  .cvsignore  .editorconfig  .envrc  .gitignore  .gitlab-ci.yml  .gitmodules  .gitreview  .mailmap  .shellcheckrc  AUTHORS  CHANGELOG.md  COMMIT-QUEUE.ini  COPYING  ChangeLog  HACKING  Kconfig  MAINTAINERS  Makefile  Makefile.inc  Makefile.mk  NEWS  PRESUBMIT.cfg  README  README.md  Rules.make  adt.txt  ast.txt  config-b75md3v  config.snow  cscope.proj  default.code-workspace  flake.nix  gnat.adc  groups  (+4 more)
.github/: pull.yml
Documentation/: .gitignore  .mdl_style.rb  AMD-S3.txt  COPYING  Config  CorebootBuildingGuide.tex  Doxyfile.coreboot  Doxyfile.coreboot_simple  Kconfig.tex  Lesson2.md  LinuxBIOSDoc.config  Makefile  Makefile.sphinx  POSTCODES  abi-data-consumption.md  abi-data-consumption.txt  acronyms.md  build_system.md  cbfs.txt  code_of_conduct.md  coding_style.md  conf.py  configmanual.lyx  configmanual.ps  corebootBuildingGuide.tex  distributions.md  external_docs.md  flashfaq.txt  gcov.txt  gerrit_guidelines.md  index.html  index.md  mainboard_io_trap_handler_sample.c  payloads.md  rmodules.md  security.md  submodules.txt  timestamp.md  util.md
HOWTO/: ALIM1631_M1535D  EPIA  K7SEM  L440GX  SiS630
LICENSES/: BSD-2-Clause-Patent.txt  BSD-2-Clause.txt  BSD-4-Clause-UC.txt  CC-PDDC.txt  GPL-2.0-or-later.txt  HPND-sell-variant.txt  HPND.txt  retained-copyrights.txt
arch/: Kconfig  Makefile
configs/: config.asrock_b85m_pro4.debug_smmstore_hotplug_gcov_ubsan_em100  config.asrock_b85m_pro4.native_raminit  config.asrock_b85m_pro4.tpm2_txt_placeholder_acms  config.asrock_imb1222  config.asus_a88xm-e.agesa_debug  config.asus_p2b_ramdebug  config.asus_p8z77-v_lx2.debug_smmstore_hotplug_yabel_em100  config.cavium_cn8100_sff_evb_bdk_verbose_fit_payload_support  config.dell_optiplex_9010_sff  config.emulation_qemu_aarch64_fit_support_timestamps  config.emulation_qemu_aarch64_zstd  config.emulation_qemu_power9  config.emulation_qemu_riscv_rv64  config.emulation_qemu_x86_i440fx  config.emulation_qemu_x86_i440fx_asan  config.emulation_qemu_x86_i440fx_debug  config.emulation_qemu_x86_i440fx_noserial  config.emulation_qemu_x86_i440fx_x86_64  config.emulation_qemu_x86_q35_smm_tseg  config.emulation_qemu_zstd  config.facebook_fbg1701.mboot_vboot  config.facebook_fbg1701.sbom  config.falco  config.foxconn_g41m  config.gigabyte_ga-g41m-es2l  config.gigabyte_mz33-ar1  config.google_guado.pch_serialio_uart  config.google_kevin_secdata_mock  config.google_meep_cros  config.google_octopus_spi_flash_console  config.google_panther.pch_serialio_uart  (+67 more)
cros/: build  (+2 more)
payloads/libpayload/curses/PDCurses/: HISTORY  IMPLEMNT  Makefile.in  PDCurses.spec  README  aclocal.m4  config.h.in  configure.ac  curses.h  libobjs.mif  makedist.mif  version.mif  watcom.mif
payloads/libpayload/curses/PDCurses/demos/: firework.c  newdemo.c  testcurs.c  tui.c  tuidemo.c  xmas.c
payloads/libpayload/curses/PDCurses/doc/: Makefile  intro.txt  manext.c  sdl.txt  x11.txt
payloads/libpayload/curses/PDCurses/dos/: README  bccdos.mak  gccdos.mak  mscdos.lrf  mscdos.mak  pdcdos.h  pdcscrn.c  pdcsetsc.c  pdcutil.c
payloads/libpayload/curses/PDCurses/os2/: README  bccos2.mak  gccos2.mak  iccos2.lrf  iccos2.mak  pdcdisp.c  pdcgetsc.c  pdckbd.c  pdcos2.h  pdcsetsc.c  pdcutil.c
payloads/libpayload/curses/PDCurses/pdcurses/: addch.c  addstr.c  attr.c  border.c  clear.c  delch.c  deleteln.c  getch.c  getstr.c  getyx.c  inch.c  initscr.c  inopts.c  insch.c  insstr.c  kernel.c  keyname.c  move.c  overlay.c  pad.c  refresh.c  scanw.c  scroll.c  slk.c  termattr.c  terminfo.c  touch.c  window.c
payloads/libpayload/curses/PDCurses/sdl1/: Makefile.mng  README  pdcclip.c  pdcdisp.c  pdcgetsc.c  pdcscrn.c  pdcsdl.h  pdcutil.c  sdltest.c
payloads/libpayload/curses/PDCurses/win32/: README  dmcwin32.mak  mingwin32.mak  pdcgetsc.c  pdcscrn.c  pdcsetsc.c  vcwin32.mak  wccwin32.mak
payloads/libpayload/curses/PDCurses/x11/: Makefile.aix.in  README  ScrollBox.c  ScrollBox.h  ScrollBoxP.h  pdcclip.c  pdcgetsc.c  pdckbd.c  pdcsetsc.c  pdcutil.c  pdcx11.h  x11.c
util/coreboot-configurator/src/application/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  Configuration.cpp  Configuration.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NvramToolCli.cpp  NvramToolCli.h  ToggleSwitch.cpp  ToggleSwitch.h  ToggleSwitch.svg.h  Util.h  lang.qrc  main.cpp  meson.build  resources.qrc
util/coreboot-configurator/src/application/qrc/: categories.yaml
util/coreboot-configurator/src/resources/: coreboot-configurator.desktop  meson.build  org.coreboot.nvramtool.policy  org.coreboot.reboot.policy
util/mkelfImage/: AUTHORS  COPYING  Makefile  Makefile.conf.in  News  configure  configure.ac  configure.in  mkelfImage.pl  mkelfImage.spec.in
util/mkelfImage/arch/i386/include/: limits.h  stdint.h
util/mkelfImage/arch/i386/include/arch/: io.h
util/mkelfImage/arch/ia64/include/: limits.h  stdint.h
util/mkelfImage/config/: config.guess  config.sub
util/mkelfImage/elf32-i386/: convert_params.c  elfImage.lds  elf_boot.h  head.S  linuxbios_tables.h  uniform_boot.h
util/mkelfImage/include/: elf.h  elf_boot.h  linuxbios_tables.h  mkelfImage.h
util/mkelfImage/kunzip_src/arch/alpha/include/: stddef.h  stdint.h
util/mkelfImage/kunzip_src/arch/alpha/lib/: Makefile  divide.S  kunzip.lds  start.S
util/mkelfImage/kunzip_src/arch/i386/include/: stddef.h  stdint.h
util/mkelfImage/kunzip_src/arch/i386/lib/: Makefile  kunzip.lds  start.S
util/mkelfImage/kunzip_src/include/: stdarg.h  string.h  types.h
util/mkelfImage/kunzip_src/lib/: inflate.c  kunzip.c  malloc.c
util/mkelfImage/linux-i386/: Makefile  convert.bin.c  convert.h  convert.lds  convert_params.c  head.S  mkelf-linux-i386.c  uniform_boot.h  x86-linux.h
util/mkelfImage/linux-ia64/: Makefile  convert.bin.c  convert.h  convert.lds  convert_params.c  head.S  mkelf-linux-ia64.c
util/mkelfImage/main/: Makefile  mkelfImage.c  mkelfImage.man
util/mkelfImage/util/: Makefile  bin-to-hex.c
(+43675 files in other folders)
